--- a/index_backup2.html
+++ b/index_backup2.html
@@ -33,7 +33,6 @@
     <header>
       <h1 class="sr-only">Coding Exercise</h1>
       </header>
-
       <!--enter here for Bootstrap nav class -->
        <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -59,13 +58,13 @@
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
-          </div><!-- closes md12 -->
+  </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
         <!-- stop here for Bootstrap nav class -->
       <!-- start here for colorful USFSP nav -->
-  <div class="container-fluid">
+  <div class="container-fluid header hfgreen"  style="padding-bottom:25px;padding-top:25px;">
     <div class="col-md-12">
-           <nav id="colorfulnav" style="padding-bottom:25px;padding-top:25px;">
+           <nav id="colorfulnav">
         <header><h3 class="sr-only">Nav Menu</h3></header>
         <ul>
           <li><a href="#overview" style="background:#9CCB3B">Overview</a></li>
