--- a/index_backup2.html
+++ b/index_backup2.html
@@ -37,6 +37,13 @@
        <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
+          <!-- this button is commented out because too problematic for accessibility -->
+           <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button> -->
          
           <a class="navbar-brand" href="#">Coding Exercise</a>
         </div>
