--- a/index_backup2.html
+++ b/index_backup2.html
@@ -47,7 +47,7 @@
          
           <a class="navbar-brand" href="#">Coding Exercise</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div id="navbar" class="navbar-collapse">
           <form class="navbar-form navbar-right">
             <div class="form-group">
               <input type="text" placeholder="Email" class="form-control">
