--- a/index_backup2.html
+++ b/index_backup2.html
@@ -47,7 +47,8 @@
          
           <a class="navbar-brand" href="#">Coding Exercise</a>
         </div>
-        <div id="navbar" class="navbar-collapse">
+        <!-- <div id="navbar" class="navbar-collapse collapse"> -->
+        <div class="container-fluid" style="background:#000000;">
           <form class="navbar-form navbar-right">
             <div class="form-group">
               <input type="text" placeholder="Email" class="form-control">
