--- a/index_backup2.html
+++ b/index_backup2.html
@@ -48,10 +48,12 @@
           <a class="navbar-brand" href="#">Coding Exercise</a>
         </div>
         <!-- <div id="navbar" class="navbar-collapse collapse"> -->
-        <div class="container-fluid" style="background:#000000;">
+        <!-- above line removed for accessibility issues -->
+        <div id="navbar" class="container-fluid" style="background:#000000;">
           <form class="navbar-form navbar-right">
             <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+              <input type="email" placeholder="Email" class="form-control">
+              <!-- input type changed from text to update to html5 -->
             </div>
             <div class="form-group">
               <input type="password" placeholder="Password" class="form-control">
