--- a/index_backup2.html
+++ b/index_backup2.html
@@ -49,7 +49,7 @@
         </div>
         <!-- <div id="navbar" class="navbar-collapse collapse"> -->
         <!-- above line removed for accessibility issues -->
-        <div id="navbar" class="container-fluid" style="background:#000000;">
+        <div id="navbar" class="container-fluid">
           <form class="navbar-form navbar-right">
             <div class="form-group">
               <input type="email" placeholder="Email" class="form-control">
