--- a/index_backup2.html
+++ b/index_backup2.html
@@ -49,7 +49,7 @@
         </div>
         <!-- <div id="navbar" class="navbar-collapse collapse"> -->
         <!-- above line removed for accessibility issues -->
-        <div id="navbar" class="container-fluid">
+        <div id="navbar" class="container-fluid navbar-form">
           <form class="navbar-form navbar-right">
             <div class="form-group">
               <input type="email" placeholder="Email" class="form-control">
@@ -84,7 +84,7 @@
   <main><!-- used for accessibility, screen readers will announce entering main section-->
     <div class="container-fluid main_color">
       <div class="col-md-12" id="overview">
-      <header><h2>How I Built This Web Page</h2></header>
+      <header><h2>Building a web page..</h2></header>
       </div><!-- closes colmd12 -->
     </div><!-- closes containerfluid main_color with header How I built the web page-->
     
