--- a/index_backup2.html
+++ b/index_backup2.html
@@ -50,13 +50,15 @@
         <!-- <div id="navbar" class="navbar-collapse collapse"> -->
         <!-- above line removed for accessibility issues -->
         <div id="navbar" class="container-fluid navbar-form">
+          <!-- labels added for accessibiltiy -->
           <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="email" placeholder="Email" class="form-control">
+            <div class="form-group"><label for="email" class="sr-only">
+              <input type="email" placeholder="Email" class="form-control"></label>
               <!-- input type changed from text to update to html5 -->
             </div>
             <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
+              <label for="password" class="sr-only">
+              <input type="password" placeholder="Password" class="form-control"></label>
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
           </form>
