--- a/index_backup2.html
+++ b/index_backup2.html
@@ -53,12 +53,12 @@
           <!-- labels added for accessibiltiy -->
           <form class="navbar-form navbar-right">
             <div class="form-group"><label for="email" class="sr-only">
-              <input type="email" placeholder="Email" class="form-control"></label>
+              <input type="email" id="email" placeholder="Email" class="form-control"></label>
               <!-- input type changed from text to update to html5 -->
             </div>
             <div class="form-group">
               <label for="password" class="sr-only">
-              <input type="password" placeholder="Password" class="form-control"></label>
+              <input type="password" id="password" placeholder="Password" class="form-control"></label>
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
           </form>
