--- a/index_backup2.html
+++ b/index_backup2.html
@@ -52,12 +52,12 @@
         <div id="navbar" class="container-fluid navbar-form">
           <!-- labels added for accessibiltiy -->
           <form class="navbar-form navbar-right">
-            <div class="form-group"><label for="email" class="sr-only">
+            <div class="form-group"><label for="email">
               <input type="email" id="email" placeholder="Email" class="form-control"></label>
               <!-- input type changed from text to update to html5 -->
             </div>
             <div class="form-group">
-              <label for="password" class="sr-only">
+              <label for="password">
               <input type="password" id="password" placeholder="Password" class="form-control"></label>
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
