--- a/index_backup2.html
+++ b/index_backup2.html
@@ -51,7 +51,7 @@
         <!-- above line removed for accessibility issues -->
         <div id="navbar" class="container-fluid navbar-form">
           <!-- labels added for accessibiltiy -->
-          <form class="navbar-form navbar-right">
+          <form class="navbar-right">
             <div class="form-group"><label for="email">
               <input type="email" id="email" placeholder="Email" class="form-control"></label>
               <!-- input type changed from text to update to html5 -->
