--- a/index_backup2.html
+++ b/index_backup2.html
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
           </button> -->
          
-          <a class="navbar-brand" href="#">Coding Exercise</a>
+          <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>Coding Exercise</a>
         </div>
         <!-- <div id="navbar" class="navbar-collapse collapse"> -->
         <!-- above line removed for accessibility issues -->
