--- a/index_backup2.html
+++ b/index_backup2.html
@@ -45,13 +45,13 @@
             <span class="icon-bar"></span>
           </button> -->
          
-          <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span></a>
+          <!-- <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span></a> -->
         </div>
         <!-- <div id="navbar" class="navbar-collapse collapse"> -->
         <!-- above line removed for accessibility issues -->
         <div id="navbar" class="container-fluid navbar-form">
           <!-- labels added for accessibiltiy -->
-          <form class="navbar-right">
+          <form class="navbar-left">
             <div class="form-group"><label for="email">
               <input type="email" id="email" placeholder="Email" class="form-control"></label>
               <!-- input type changed from text to update to html5 -->
