--- a/index_backup2.html
+++ b/index_backup2.html
@@ -93,13 +93,9 @@
     <!-- Start of Visual -->
 
  <div class="container-fluid">
-   <div class="col-md-12"><img src="http://cook-my-catch.com/T3special/public-domain-lion-image-web.jpg" class="img-responsive">&nbsp;</div>
+   <div class="col-md-12"><img src="http://cook-my-catch.com/T3special/public-domain-lion-image-web.jpg" class="img-responsive" alt="old graphic print of a grumpy lion">&nbsp;</div>
  </div>
-  <div class="container-fluid" style="background:url('http://cook-my-catch.com/T3special/public-domain-lion-image-web.jpg') no-repeat center center;background-size:cover;">&nbsp;</div>
-   <div class="container-fluid" style="background:#000030;color:#ffffff;"><h6>Image by Sharon Austin. Creative Commons Attribution 3.0 license.</h6>
-   </div>    
-</div>
-<!-- end visual -->
+  <!-- end visual -->
     
     
     <div class="container-fluid main_color" style="background:#69b4a4">
