--- a/index_backup2.html
+++ b/index_backup2.html
@@ -60,7 +60,8 @@
               <label for="password">
               <input type="password" id="password" placeholder="Password" class="form-control"></label>
             </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
+            <label for="signin">
+            <button type="submit" id="signin" class="btn btn-success" style="top-margin:-5px;">Sign in</button></label>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
