--- a/index_backup2.html
+++ b/index_backup2.html
@@ -61,7 +61,7 @@
               <input type="password" id="password" placeholder="Password" class="form-control"></label>
             </div>
             <label for="signin">
-            <button type="submit" id="signin" class="btn btn-success" style="top-margin:-5px;">Sign in</button></label>
+            <button type="submit" id="signin" class="btn btn-success" style="margin-top:-5px;">Sign in</button></label>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
