--- a/index_backup2.html
+++ b/index_backup2.html
@@ -166,6 +166,7 @@
         </video>
         <h4>Initial evaluation of Bootstrap NavBar</h4>
         <h5>I personally thought that Bootstrap's Nav Bars were beautiful, and wanted to incorporate their style into the web page.  This is particularly true for login pages and search boxes, where those who use assistive technology will sometimes use these features as "page landmarks" in order to get their bearings on a complicated page.</h5>
+        <h5>To supplement information provided to a screen reader, I added labels to the form elements.  Adding labels helps most assistive technology, but not equally.  Each technology tends to pair with a particular browser; therefore the improvement in performance is uneven between both the technologies and browsers.</h5>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
       <h3>Video Two: Add Labels to Basic Form on Chrome</h3>
