--- a/index_backup2.html
+++ b/index_backup2.html
@@ -178,7 +178,8 @@
   <source src="http://cook-my-catch.com/CEvids/sr-addlabelsnovalidation.ogv" 
           type="video/ogv">
         </video>
-        <h4>On Chrome, adding labels assists the screenreader, but does not announce error messages</h4>
+        <h4>I found that on on Chrome, adding labels assists the screenreader, but does not announce error messages.</h4>
+        <h5>Because of HTML5's new form field features, I was uncertain whether the issue was HTML5, or the browser.  I did a couple of supplemental tests (videos included) and uncovered that this seems to be a browser issue.</h5>
       </div><!-- closes md4 -->
       <div class="col-md-4">
          <h3>Video Three: Add Labels to Basic Form on Firefox</h3>
@@ -191,6 +192,7 @@
           type="video/ogv">
         </video>
         <h4>On Firefox, adding labels assists the screenreader, and allows the native HTML5 validation response to be read out loud by the screenreader</h4>
+        <h5>If you play the video, you can hear the response to an invalid entry in the form field.</h5>
         </div><!-- closes md4 -->
       </div><!-- closes container fluid -->  
     </section>
