--- a/index_backup2.html
+++ b/index_backup2.html
@@ -193,6 +193,7 @@
         </video>
         <h4>On Firefox, adding labels assists the screenreader, and allows the native HTML5 validation response to be read out loud by the screenreader</h4>
         <h5>If you play the video, you can hear the response to an invalid entry in the form field.</h5>
+        <h5 style="color:green">Time: 40sec Screen Reader Voice: "Alert. Please enter email address."</h5>
         </div><!-- closes md4 -->
       </div><!-- closes container fluid -->  
     </section>
