--- a/index_backup2.html
+++ b/index_backup2.html
@@ -90,9 +90,29 @@
       <header><h2>Building a web page..</h2></header>
       </div><!-- closes colmd12 -->
     </div><!-- closes containerfluid main_color with header How I built the web page-->
-    
-    <!-- Start of Visual -->
-
+    <section>
+    <div class="container-fluid">
+      <div class="row">
+  <div class="col-md-6">
+    <div class="input-group">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Go!</button>
+      </span>
+      <input type="text" class="form-control" placeholder="Search for...">
+    </div><!-- /input-group -->
+  </div><!-- /.col-lg-6 -->
+  <div class="col-md-6">
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="Search for...">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Go!</button>
+      </span>
+    </div><!-- /input-group -->
+  </div><!-- /.col-lg-6 -->
+</div><!-- /.row -->
+    </div>
+    </section>
+  <!-- Start of Visual -->
  <div class="container-fluid">
    <div class="col-md-12"><img src="http://cook-my-catch.com/T3special/public-domain-lion-image-web.jpg" class="img-responsive" alt="old graphic print of a grumpy lion">&nbsp;</div>
  </div>
