--- a/index_backup2.html
+++ b/index_backup2.html
@@ -93,17 +93,14 @@
     <section>
     <div class="container-fluid">
       <div class="row">
-  <div class="col-md-6">
-    <div class="input-group">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
-      </span>
-      <input type="text" class="form-control" placeholder="Search for...">
+  <div class="col-md-6">&nbsp;
     </div><!-- /input-group -->
   </div><!-- /.col-lg-6 -->
   <div class="col-md-6">
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search for...">
+      <label for="search">
+        <!-- changed input type from text to search see http://www.w3.org/TR/html-markup/input.search.html -->
+      <input type="search" class="form-control" id="search" placeholder="Search for..."></label>
       <span class="input-group-btn">
         <button class="btn btn-default" type="button">Go!</button>
       </span>
@@ -393,6 +390,7 @@
           <li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document">Notes on Assistive Technology and Validation</a></li>
           <li><a href="http://www.w3.org/html/wg/drafts/html/master/semantics.html#the-article-element">The Article Element.</a></li>
           <li><a href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-skip.html">WCAG Navigation Elements</a></li>
+          <li><a href="http://www.w3.org/TR/html-markup/input.search.html">HTML5 Input Type Search</a></li>
         </ul>
       </div><!-- closes colmd4 three-->
       </footer>
