--- a/index_backup2.html
+++ b/index_backup2.html
@@ -93,10 +93,8 @@
     <section>
     <div class="container-fluid">
       <div class="row">
-  <div class="col-md-6">&nbsp;
-    </div><!-- /input-group -->
-  </div><!-- /.col-lg-6 -->
-  <div class="col-md-6">
+        <h2 class="sr-only">Search</h2>
+  <div class="col-md-12">
     <div class="input-group">
       <label for="search">
         <!-- changed input type from text to search see http://www.w3.org/TR/html-markup/input.search.html -->
