--- a/index_backup2.html
+++ b/index_backup2.html
@@ -94,7 +94,8 @@
     <div class="container-fluid">
       <div class="row">
         <h2 class="sr-only">Search</h2>
-  <div class="col-md-12">
+        <div class="col-md-8">&nbsp;</div>
+  <div class="col-md-4">
     <div class="input-group">
       <label for="search">
         <!-- changed input type from text to search see http://www.w3.org/TR/html-markup/input.search.html -->
