--- a/index_backup2.html
+++ b/index_backup2.html
@@ -86,17 +86,11 @@
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
     <div class="container-fluid main_color">
-      <div class="col-md-12" id="overview">
+      <div class="col-md-8" id="overview">
       <header><h2>Building a web page..</h2></header>
       </div><!-- closes colmd12 -->
-    </div><!-- closes containerfluid main_color with header How I built the web page-->
-    <section>
-    <div class="container-fluid">
-      <div class="row">
-        <h2 class="sr-only">Search</h2>
-        <div class="col-md-8">&nbsp;</div>
-  <div class="col-md-4">
-    <div class="input-group">
+      <div class="col-md-4">
+         <div class="input-group">
       <label for="search">
         <!-- changed input type from text to search see http://www.w3.org/TR/html-markup/input.search.html -->
       <input type="search" class="form-control" id="search" placeholder="Search for..."></label>
@@ -104,10 +98,9 @@
         <button class="btn btn-default" type="button">Go!</button>
       </span>
     </div><!-- /input-group -->
-  </div><!-- /.col-lg-6 -->
-</div><!-- /.row -->
-    </div>
-    </section>
+    </div><!-- md4 -->
+    </div><!-- closes containerfluid main_color with header How I built the web page-->
+
   <!-- Start of Visual -->
  <div class="container-fluid">
    <div class="col-md-12"><img src="http://cook-my-catch.com/T3special/public-domain-lion-image-web.jpg" class="img-responsive" alt="old graphic print of a grumpy lion">&nbsp;</div>
