--- a/index_backup2.html
+++ b/index_backup2.html
@@ -86,9 +86,12 @@
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
     <div class="container-fluid main_color">
+      <section>
       <div class="col-md-8" id="overview">
       <header><h2>Building a web page..</h2></header>
-      </div><!-- closes colmd12 -->
+      </div><!-- closes colmd8 -->
+      </section>
+      <section>
       <div class="col-md-4">
          <div class="input-group">
       <label for="search">
@@ -98,6 +101,7 @@
         <button class="btn btn-default" type="button">Go!</button>
       </span>
     </div><!-- /input-group -->
+    </section>
     </div><!-- md4 -->
     </div><!-- closes containerfluid main_color with header How I built the web page-->
 
