--- a/index_backup2.html
+++ b/index_backup2.html
@@ -85,7 +85,7 @@
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
-    <div class="container-fluid main_color">
+    <div class="container-fluid main_color" style="padding-top:25px;">
       <section>
       <div class="col-md-8" id="overview">
       <header><h2>Building a web page..</h2></header>
@@ -100,8 +100,8 @@
       <span class="input-group-btn">
         <button class="btn btn-default" type="button">Go!</button>
       </span>
-    </div><!-- /input-group -->
-    </section>
+      </section>
+      </div><!-- /input-group -->
     </div><!-- md4 -->
     </div><!-- closes containerfluid main_color with header How I built the web page-->
 
