--- a/index_backup2.html
+++ b/index_backup2.html
@@ -94,8 +94,8 @@
       <label for="search">
         <!-- changed input type from text to search see http://www.w3.org/TR/html-markup/input.search.html -->
       <input type="search" class="form-control" id="search" placeholder="Search for..."></label>
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
+      <span class="input-group-btn"><label for="go">
+        <button class="btn btn-default" id="go" type="button" style="margin-top:-5px;margin-left:25px;">Go!</button></label>
       </span>
       </div><!-- /input-group -->
       </div><!-- md4 -->
