--- a/index_backup2.html
+++ b/index_backup2.html
@@ -86,10 +86,13 @@
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
     <div class="container-fluid main_color" style="padding-top:25px;">
-      <div class="col-md-8" id="overview">
+      <div class="col-md-12" id="overview">
       <header><h2>Building a web page..</h2></header>
-      </div><!-- closes colmd8 -->
-      <div class="col-md-4">
+      </div><!-- closes colmd12-->
+      </div><!-- closes containerfluid -->
+      <div class="container-fluid main_color">
+      <div class="col-md-12">
+        <header><h2 class="sr-only">Search</h2></header>
          <div class="input-group">
       <label for="search">
         <!-- changed input type from text to search see http://www.w3.org/TR/html-markup/input.search.html -->
@@ -98,7 +101,7 @@
         <button class="btn btn-default" id="go" type="button" style="margin-top:-5px;margin-left:25px;">Go!</button></label>
       </span>
       </div><!-- /input-group -->
-      </div><!-- md4 -->
+      </div><!-- md12-->
     </div><!-- closes containerfluid main_color with header How I built the web page-->
 
   <!-- Start of Visual -->
