--- a/index_backup2.html
+++ b/index_backup2.html
@@ -91,9 +91,9 @@
       </div><!-- closes colmd12-->
       </div><!-- closes containerfluid -->
       <div class="container-fluid main_color">
-      <div class="col-md-12">
+      <div class="col-md-12" style="text-align:right;">
         <header><h2 class="sr-only">Search</h2></header>
-         <div class="input-group navbar-right">
+         <div class="input-group">
       <label for="search">
         <!-- changed input type from text to search see http://www.w3.org/TR/html-markup/input.search.html -->
       <input type="search" class="form-control" id="search" placeholder="Search for..."></label>
