--- a/index_backup2.html
+++ b/index_backup2.html
@@ -301,7 +301,7 @@
         <h4>content</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
-          <h3>Image Five</h3>
+          <h3>Image Five: Firefox Console Inspector</h3>
           <figure id="fig5">
         <img id="img5" src="http://cook-my-catch.com/T3special/Styles-1.jpg" class="img-responsive" alt="Screenshot showing the use of Firebug to extract css colors from USFSP webpage.">
         <figcaption id="figcaptionimg5">Using Firebug to find css colors from USFSP web page</figcaption>
@@ -309,7 +309,7 @@
         <h4>content</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-          <h3>Image Six</h3>
+          <h3>Image Six: Another View Console Inspector</h3>
           <figure id="fig6">
         <img id="img6" src="http://cook-my-catch.com/T3special/Styles-2.jpg" class="img-responsive" alt="Screenshot showing the use of Firebug to extract css styles from USFSP webpage.">
         <figcaption id="figcaptionimg6">Using Firebug to find css styles from USFSP web page</figcaption>
@@ -330,7 +330,7 @@
         <img id="img7" src="http://cook-my-catch.com/T3special/bootstrap-mobile.jpg" class="img-responsive" alt="Screenshot showing an example provided by Bootstrap for mixed mobile and desktop framework.">
         <figcaption id="figcaptionimg7">Example provided by Bootstrap for mixed mobile and desktop framework</figcaption>
         </figure>
-        <h4>content</h4>
+        <h4>Baseline wireframe</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
           <h3>Image Eight: Code Project on Bootstrap mixed layout</h3>
@@ -338,7 +338,7 @@
         <img id="img8" src="http://cook-my-catch.com/T3special/project-mobile.jpg" class="img-responsive" alt="Screenshot showing the project using a mixed Bootstrap framework.">
         <figcaption id="figcaptionimg8">Screenshot showing the project using the mixed Bootstrap framework</figcaption>
         </figure>
-        <h4>content</h4>
+        <h4>Project using mixed grid</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
           <h3>Image Nine: Final Decision Responsive Desktop</h3>
@@ -346,7 +346,7 @@
         <img id="img9" src="http://cook-my-catch.com/T3special/project-responsive.jpg" class="img-responsive" alt="Screenshot showing the preferred framework where content is not too crowded.">
         <figcaption id="figcaptionimg9">Preferred layout allows better visual cognition -- content is not too crowded.</figcaption>
         </figure>
-        <h4>content</h4>
+        <h4>Responsive Desktop</h4>
       </div><!-- closes md4 -->
     </div><!-- closes container fluid -->    
     </section>
