--- a/index_backup2.html
+++ b/index_backup2.html
@@ -227,6 +227,7 @@
   <source src="http://cook-my-catch.com/CEvids/sr-collapsedannounced-nofocus.ogv" 
           type="video/ogv">
         </video>
+        <h4>Here I discover that the screen reader announces that there is a navigation button that is collapsed, but I cannot reach it--it has no focus.</h4>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
       <h3>Video Five: Basic HTML5 Form on Chrome</h3>
