--- a/index_backup2.html
+++ b/index_backup2.html
@@ -239,6 +239,7 @@
   <source src="http://cook-my-catch.com/CEvids/sr-basicHTML5formChrome.ogv" 
           type="video/ogv">
         </video>
+        <h4>Testing basic HTML5 form functionality on Chrome. The alerts aren't read in a logical manner.</h4>
       </div><!-- closes md4 -->
       <div class="col-md-4">
          <h3>Video Six: Basic HTML5 Form on Firefox</h3>
@@ -250,6 +251,7 @@
   <source src="http://cook-my-catch.com/CEvids/sr-basicHTML5formFirefox.ogv" 
           type="video/ogv">
         </video>
+        <h4>Testing basic HTML5 form functionality on Firefox.  It has a better performance than Chrome in terms of alerts.</h4>
         </div><!-- closes md4 -->
       </div><!-- closes container fluid -->  
     </section>
