--- a/index_backup2.html
+++ b/index_backup2.html
@@ -417,13 +417,7 @@
      </dl>
      </div><!--closes col md4 -->
      <div class="col-md-4">
-     <h5>Pages</h5>
-     <ul>
-         <li><a href="https://cook-my-catch.github.io/"
-             itemprop="url">Github Page</a></li>
-         <li><a href="http://cook-my-catch.com"
-             itemprop="url">Scratch Site</a></li>
-     </ul>
+        &nbsp;
       </div>
     </div>
 </footer>
