--- a/order/29July2015-usfsp-test1.html
+++ b/order/29July2015-usfsp-test1.html
@@ -24,8 +24,7 @@
     <![endif]-->
     <!-- USFSP -->
     <link href='http://fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond' rel='stylesheet' type='text/css'>
-    <link href="usfsp.css" rel="stylesheet">
-    <link href="usfsp-flex0.css" rel="stylesheet">
+    <link href="29July2015-usfsp-css0.css" rel="stylesheet">
     <!-- end USFSP -->
   </head>
   <body class="wrap_all">
