--- a/order/29July2015-usfsp-test1.html
+++ b/order/29July2015-usfsp-test1.html
@@ -127,6 +127,9 @@
      <!-- order test1 starts here -->
      
      <div class="container-fluid main_color" style="background:yellow;">
+       <h3>Bootstrap Order Test</h3>
+       <h4>Testing code from <a href="http://getbootstrap.com/css/#grid-column-ordering">Bootstrap section on column ordering</a></h4>
+       <h4>Accessed 29July2015</h4>
        <!-- code from http://getbootstrap.com/css/#grid-column-ordering -->
         <div class="row">
           <div class="col-md-9 col-md-push-3">.col-md-9 .col-md-push-3</div>
