--- a/order/29July2015-usfsp-test1.html
+++ b/order/29July2015-usfsp-test1.html
@@ -445,6 +445,8 @@
     </div>
 </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- the above script is actually in the header also but was reported as missing in console log need to check -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!--<script src="js/bootstrap.min.js"></script> -->
