--- a/order/29July2015-usfsp-test1.html
+++ b/order/29July2015-usfsp-test1.html
@@ -378,10 +378,11 @@
           <div class="col-md-3 col-md-pull-9" style="background:#80B0A6">.col-md-3 .col-md-pull-9</div>
         </div>
         <!-- end code from http://getbootstrap.com/css/#grid-column-ordering -->
-        
+        <div class="row" style="padding-top:25px;">
         <ul>
          <li><a href="http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap">http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap</a></li>
         </ul>
+        </div><!-- closes row for ul li -->
      </div><!-- closes container fluid -->
      <!-- order test1 ends here -->
      </footer>
