--- a/order/29July2015-usfsp-test1.html
+++ b/order/29July2015-usfsp-test1.html
@@ -383,6 +383,10 @@
          <li><a href="http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap">http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap</a></li>
         </ul>
         </div><!-- closes row for ul li -->
+        <div class="row">
+          <h4>Notes:</h4>
+          <h5>Applying style to class="row" is not working for col-md-9 col-md-push3 section probably over-ridden by my own css but need to check.</h5>
+        </div>
      </div><!-- closes container fluid -->
      <!-- order test1 ends here -->
      </footer>
