--- a/order/29July2015-usfsp-test1.html
+++ b/order/29July2015-usfsp-test1.html
@@ -384,9 +384,11 @@
         </ul>
         </div><!-- closes row for ul li -->
         <div class="row">
+          <div class="col-md-12">
           <h4>Notes:</h4>
           <h5>Applying style to class="row" is not working for col-md-9 col-md-push3 section probably over-ridden by my own css but need to check.</h5>
-        </div>
+          </div><!-- closes md-12 -->
+        </div><!-- closes class row -->
      </div><!-- closes container fluid -->
      <!-- order test1 ends here -->
      </footer>
