--- a/order/29July2015-usfsp-test1.html
+++ b/order/29July2015-usfsp-test1.html
@@ -368,14 +368,14 @@
         </div><!-- closes colmd12 underline-->
        <!-- code from http://getbootstrap.com/css/#grid-column-ordering -->
         <div class="row" style="padding-top:25px;">
-          <div class="col-md-9 col-md-push-3" style="background:#9CCB3B">.col-md-9 .col-md-push-3 Column A</div>
-          <div class="col-md-3 col-md-pull-9" style="background:#29AFCE">.col-md-3 .col-md-pull-9 Column B</div>
+          <div class="col-md-9 col-md-push-3" style="background:#9CCB3B;">.col-md-9 .col-md-push-3 Column A</div>
+          <div class="col-md-3 col-md-pull-9" style="background:#29AFCE;">.col-md-3 .col-md-pull-9 Column B</div>
         </div>
         <!-- end code from http://getbootstrap.com/css/#grid-column-ordering -->
         <!-- code from http://getbootstrap.com/css/#grid-column-ordering -->
         <div class="row">  
-          <div class="col-md-3 col-md-pull-9" style="background:#7E96A0">.col-md-3 .col-md-pull-9 Column C</div>
-          <div class="col-md-9 col-md-push-3" style="background:#80B0A6">.col-md-9 .col-md-push-3 Column D</div>
+          <div class="col-md-3 col-md-pull-9" style="background:#7E96A0;">.col-md-3 .col-md-pull-9 Column C</div>
+          <div class="col-md-9 col-md-push-3" style="background:#80B0A6;">.col-md-9 .col-md-push-3 Column D</div>
         </div>
         <!-- end code from http://getbootstrap.com/css/#grid-column-ordering -->
         <div class="row" style="padding-top:25px;">
