--- a/order/29July2015-usfsp-test1.html
+++ b/order/29July2015-usfsp-test1.html
@@ -375,7 +375,7 @@
         <!-- end code from http://getbootstrap.com/css/#grid-column-ordering -->
         <!-- code from http://getbootstrap.com/css/#grid-column-ordering -->
         <div class="row"> 
-          <h4>Reversed the columns above</h4>
+          <h4>Reversed the columns above; Column C will not be visible until width is 970 or below</h4>
           <div class="col-md-3 col-md-pull-9" style="background:#7E96A0;">.col-md-3 .col-md-pull-9 Column C</div>
           <div class="col-md-9 col-md-push-3" style="background:#80B0A6;">.col-md-9 .col-md-push-3 Column D</div>
         </div>
