--- a/order/29July2015-usfsp-test1.html
+++ b/order/29July2015-usfsp-test1.html
@@ -394,6 +394,7 @@
           <div class="col-md-4">
             <ul>
               <li><a href="http://jsfiddle.net/SchmalzyB/4cbzY/">http://jsfiddle.net/SchmalzyB/4cbzY/</a></li>
+              <li><a href="http://jsfiddle.net/DrGeneral/BxaNN/1/">http://jsfiddle.net/DrGeneral/BxaNN/1/</a></li>
             </ul>
           </div>
         </div><!-- closes row for ul li -->
