--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -115,7 +115,9 @@
         <div class="col-md-8">
           <section>
           <h2>Introduction</h2>
-          <h3>Many questons arose while creating this page--even the simplest questions, such as what validation really means (it's not the same as conformance), "who" should be the final authority on validation (W3C and WCAG are not in agreement with each other) "how" structure should be evaluated (outlines are still used by assistive technology, but they do not necessarily align with the DOM tree) and "how much" is the accessibility improved with HTML5 features (e.g., are captions read by a screen reader?  It turns out they are not, and therefore alt text is still required).</h3>
+          <h3>Plunger pot and, cortado irish strong acerbic saucer redeye to go. Single shot, caffeine eu macchiato steamed crema shop id medium. Galão affogato wings acerbic coffee galão aftertaste. Cinnamon strong, latte con panna that white id that cup carajillo arabica.
+
+Café au lait french press turkish espresso qui roast mazagran that. Cultivar, froth, a milk java robust aftertaste cream. Fair trade aromatic, bar, saucer, whipped java carajillo macchiato foam single origin. Strong mazagran, a mocha americano cultivar turkish eu plunger pot extraction..</h3>
           </section>
           </div><!-- closes col md4 -->
       <div class="col-md-4">
