--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -200,7 +200,7 @@ Café au lait french press turkish espresso qui roast mazagran that. Cultivar, f
     
     <section><!-- opens section for finding the right styles -->
    <div class="row">
-    <div class="col-md-4 col-md-push-8 style="background:red;">
+    <div class="col-md-4 col-md-push-8 style="background:light-green;">
         C
     </div>
     <div class="col-md-5 col-md-pull-4" style="background:yellow;">
@@ -211,39 +211,7 @@ Café au lait french press turkish espresso qui roast mazagran that. Cultivar, f
     </div>
 </div>
     </section>
-    <!-- third group of images starts here -->
-      <section><!-- opens section for finding the right styles -->
-    <div class="container-fluid main_color">
-    <div class="col-md-12 bb">
-      <h2>Deciding on a Layout</h2>
-    </div>
-      <div class="col-md-4">
-        <h3>Image Seven: Bootstrap mixed mobile and desktop</h3>
-        <figure id="fig7">
-        <img id="img7" src="http://cook-my-catch.com/T3special/bootstrap-mobile.jpg" class="img-responsive" alt="Screenshot showing an example provided by Bootstrap for mixed mobile and desktop framework.">
-        <figcaption id="figcaptionimg7">Example provided by Bootstrap for mixed mobile and desktop framework</figcaption>
-        </figure>
-        <h4>Baseline wireframe</h4>
-      </div><!-- closes colmd4 -->
-      <div class="col-md-4">
-          <h3>Image Eight: Code Project on Bootstrap mixed layout</h3>
-          <figure id="fig8">
-        <img id="img8" src="http://cook-my-catch.com/T3special/project-mobile.jpg" class="img-responsive" alt="Screenshot showing the project using a mixed Bootstrap framework.">
-        <figcaption id="figcaptionimg8">Screenshot showing the project using the mixed Bootstrap framework</figcaption>
-        </figure>
-        <h4>Project using mixed grid</h4>
-      </div><!-- closes md4 -->
-      <div class="col-md-4">
-          <h3>Image Nine: Final Decision Responsive Desktop</h3>
-          <figure id="fig9">
-        <img id="img9" src="http://cook-my-catch.com/T3special/project-responsive.jpg" class="img-responsive" alt="Screenshot showing the preferred framework where content is not too crowded.">
-        <figcaption id="figcaptionimg9">Preferred layout allows better visual cognition -- content is not too crowded.</figcaption>
-        </figure>
-        <h4>Responsive Desktop</h4>
-      </div><!-- closes md4 -->
-    </div><!-- closes container fluid -->    
-    </section>
-    <!-- third group of images ends here -->
+
    
       <section>
      <!-- order test1 starts here -->
