--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -130,18 +130,27 @@ Café au lait french press turkish espresso qui roast mazagran that. Cultivar, f
 
 
     <section><!-- test 3 starts here -->
-   <div class="row">
+
+   
+        <div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork">
+       	<div class="col-md-12 footer_one_underline" id="ordertest3">
+       	
+       	   <div class="row">
    	<h3>Test Three</h3>
+   	<a href="http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap">http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap</a>
     <div class="col-md-4 col-md-push-8" style="background:red;">
         C
-    </div>
+    </div><!-- closes column C -->
     <div class="col-md-5 col-md-pull-4" style="background:yellow;">
         A
-    </div>
+    </div><!-- closes column A -->
     <div class="col-md-3 col-md-pull-4" style="background:blue;">
         B
-    </div>
-   </div>
+    </div><!-- closes column B-->
+   </div><!-- closes class row -->
+       	
+       </div><!-- closes order test 3 -->
+      </div><!-- closes container-fluid for order test three -->
     </section><!-- test three ends here -->
 
    
