--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -75,9 +75,9 @@
            <nav id="colorfulnav">
         <header><h3 class="sr-only">Nav Menu</h3></header>
         <ul>
-          <li><a href="#overview" style="background:#9CCB3B">Overview</a></li>
-          <li><a href="#videos" style="background:#29AFCE">Videos</a></li>
-          <li><a href="#screenshots" style="background:#7E96A0">Screenshots</a></li>
+          <li><a href="#ordertest1" style="background:#9CCB3B">Test One</a></li>
+          <li><a href="#ordertest2" style="background:#29AFCE">Test Two</a></li>
+          <li><a href="#ordertest3" style="background:#7E96A0">Test Three</a></li>
           <li><a href="#references" style="background:#80B0A6">References</a></li>
         </ul>
       </nav> 
@@ -204,7 +204,7 @@ Café au lait french press turkish espresso qui roast mazagran that. Cultivar, f
      </section>
 
     <section><!-- test 3 starts here -->
-        <div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork">
+        <div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="padding-bottom:50px;">
        	<div class="col-md-12" id="ordertest3">
        		<h3>Bootstrap Column Order Test Three</h3>
               	<h4 itemprop="isBasedOnUrl"><a href="http://getbootstrap.com/css/#grid-column-ordering">Bootstrap Grid Column Ordering</a></h4>
