--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -172,6 +172,7 @@ Café au lait french press turkish espresso qui roast mazagran that. Cultivar, f
         </div><!-- closes row for ul li -->
         <!-- start code from http://jsfiddle.net/SchmalzyB/4cbzY/-->
         <div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork">
+          <div class="col-md-12" id="ordertest2">
         	<h3>Bootstrap Column Order Test Two</h3>
 		<div class="row">
 			<div id="content" class="col-lg-4 col-lg-push-4 col-sm-12" style="background:#9CCB3B;">
@@ -188,17 +189,12 @@ Café au lait french press turkish espresso qui roast mazagran that. Cultivar, f
 			<h2>This is Right Sidebar</h2>
 			<p>orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 			</div>
-		</div>
-	</div>
+		</div><!-- closes row order test two -->
+	  </div><!-- closes col md 12 order test 2 -->
+	</div><!-- closes container fluid order test 2 -->
 			
 			
         <!--end code from http://jsfiddle.net/SchmalzyB/4cbzY/-->
-        <div class="row">
-          <div class="col-md-12">
-          <h4>Notes:</h4>
-          <h5>Applying style to class="row" is not working for col-md-9 col-md-push3 section probably over-ridden by my own css but need to check.</h5>
-          </div><!-- closes md-12 -->
-        </div><!-- closes class row -->
      </div><!-- closes container fluid -->
      <!-- order test1 ends here -->
      </section>
