--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -236,6 +236,7 @@ Café au lait french press turkish espresso qui roast mazagran that. Cultivar, f
         <li><a href="http://www.dirtymarkup.com/">Dirty Markup</a></li>
         <li><a href="https://validator.w3.org/checklink">Link checker</a></li>
         <li><a href="http://caniuse.com/">Can I Use?</a></li>
+        <li><a href="http://cook-my-catch.github.io/order/29July2015-usfsp-test2.html">Structured Data Test Tool</a></li>
         
       </ul>  
       </div><!-- closes md4 one -->
