--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -75,9 +75,9 @@
            <nav id="colorfulnav">
         <header><h3 class="sr-only">Nav Menu</h3></header>
         <ul>
-          <li><a href="#ordertest1" style="background:#9CCB3B">Test One</a></li>
-          <li><a href="#ordertest2" style="background:#29AFCE">Test Two</a></li>
-          <li><a href="#ordertest3" style="background:#7E96A0">Test Three</a></li>
+          <li><a href="https://validator.nu/" style="background:#9CCB3B">Nu Validator</a></li>
+          <li><a href="https://developers.google.com/structured-data/testing-tool/" style="background:#29AFCE">Structured Testing</a></li>
+          <li><a href="http://www.tenon.io/" style="background:#7E96A0">Tenon</a></li>
           <li><a href="#references" style="background:#80B0A6">References</a></li>
         </ul>
       </nav> 
@@ -126,7 +126,11 @@ Café au lait french press turkish espresso qui roast mazagran that. Cultivar, f
       </div><!-- closes colmd4 -->
      </div><!-- closes container-fluid main_color -->
 
-
+<aside>
+	<h3><a href="http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap">http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap</a></h3>
+	<h3 style="color:red;">Question to be Answered:</h3>
+	<h4 style="color:red;">Does Bootstrap "pull-x" and "push-x" feature pull and push off visibility from screen, but remain available to screenreaders?</h4>
+</aside>
 
    
       <section>
