--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -114,15 +114,12 @@
     <div class="container-fluid main_color" style="background:#69b4a4">
         <div class="col-md-8">
           <section>
-          <h2>Introduction</h2>
-          <h3>Plunger pot and, cortado irish strong acerbic saucer redeye to go. Single shot, caffeine eu macchiato steamed crema shop id medium. Galão affogato wings acerbic coffee galão aftertaste. Cinnamon strong, latte con panna that white id that cup carajillo arabica.
-
-Café au lait french press turkish espresso qui roast mazagran that. Cultivar, froth, a milk java robust aftertaste cream. Fair trade aromatic, bar, saucer, whipped java carajillo macchiato foam single origin. Strong mazagran, a mocha americano cultivar turkish eu plunger pot extraction..</h3>
+          <h2>TasK</h2>
+          <h3>Find out about Bootstrap's ability to re-order columns</h3>
           </section>
           </div><!-- closes col md4 -->
       <div class="col-md-4">
         Aside for PHP scraping...or
-
       </div><!-- closes colmd4 -->
      </div><!-- closes container-fluid main_color -->
 
@@ -136,7 +133,11 @@ Café au lait french press turkish espresso qui roast mazagran that. Cultivar, f
 	</div><!-- closes col md12 -->
 	</div><!-- closes container fluid -->
 </aside>
-
+<aside>
+	<div class="container-fluid main_color" style="background:#69b4a4">
+        <div class="col-md-12">&nbsp;</div>
+        </div><!-- closes container fluid -->
+</aside>
    
       <section>
      <!-- order test1 starts here -->
