--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -111,33 +111,24 @@
   <!-- end visual -->
     
     
-    <div class="container-fluid main_color" style="background:#69b4a4">
-        <div class="col-md-8">
-          <section>
-          <h2>TasK</h2>
-          <h3>Find out about Bootstrap's ability to re-order columns</h3>
-          </section>
-          </div><!-- closes col md4 -->
-      <div class="col-md-4">
-        Aside for PHP scraping...or
-      </div><!-- closes colmd4 -->
-     </div><!-- closes container-fluid main_color -->
 
 <aside>
+	<div class="container-fluid main_color" style="background:#69b4a4">
+        <div class="col-md-12">&nbsp;</div>
+        </div><!-- closes container fluid -->
+</aside>
+<section>
+	<header><h2>Task: Investigate Bootstrap Column Re-ordering</h2></header>
 	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork">
-       <div class="col-md-12" id="task29July2015">
+       	<div class="col-md-12" id="task29July2015">
 	<h4 itemprop="isBasedOnUrl"><a href="http://getbootstrap.com/css/#grid-column-ordering">http://getbootstrap.com/css/#grid-column-ordering</a></h4>
 	<h4 itemprop="isBasedOnUrl"><a href="http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap">http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap</a></h4>
 	<h3 style="color:red;">Question to be Answered:</h3>
 	<h4 style="color:red;">Does Bootstrap "pull-x" and "push-x" feature pull and push off visibility from screen, but remain available to screenreaders?</h4>
 	</div><!-- closes col md12 -->
 	</div><!-- closes container fluid -->
-</aside>
-<aside>
-	<div class="container-fluid main_color" style="background:#69b4a4">
-        <div class="col-md-12">&nbsp;</div>
-        </div><!-- closes container fluid -->
-</aside>
+</section>
+
    
       <section>
      <!-- order test1 starts here -->
