--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -112,15 +112,12 @@
     
     
 
-<aside>
-	<div class="container-fluid main_color" style="background:#69b4a4">
-        <div class="col-md-12">&nbsp;</div>
-        </div><!-- closes container fluid -->
-</aside>
+
 <section>
-	<header><h2>Task: Investigate Bootstrap Column Re-ordering</h2></header>
-	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork">
+
+	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="border:solid 5px #69b4a4">
        	<div class="col-md-12" id="task29July2015">
+       	<header><h2>Task: Investigate Bootstrap Column Re-ordering</h2></header>
 	<h4 itemprop="isBasedOnUrl"><a href="http://getbootstrap.com/css/#grid-column-ordering">http://getbootstrap.com/css/#grid-column-ordering</a></h4>
 	<h4 itemprop="isBasedOnUrl"><a href="http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap">http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap</a></h4>
 	<h3 style="color:red;">Question to be Answered:</h3>
