--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -115,7 +115,7 @@
 
 <section>
 
-	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="border:solid 5px 7px #69b4a4">
+	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="border-top:solid 5px #69b4a4;border-bottom:solid 7px #69b4a4;">
        	<div class="col-md-12" id="task29July2015">
        	<header><h2>Task: Investigate Bootstrap Column Re-ordering</h2></header>
 	<h4 itemprop="isBasedOnUrl"><a href="http://getbootstrap.com/css/#grid-column-ordering">http://getbootstrap.com/css/#grid-column-ordering</a></h4>
