--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -120,8 +120,8 @@
        	<header><h2>Task: Investigate Bootstrap Column Re-ordering</h2></header>
 	<h4 itemprop="isBasedOnUrl"><a href="http://getbootstrap.com/css/#grid-column-ordering">http://getbootstrap.com/css/#grid-column-ordering</a></h4>
 	<h4 itemprop="isBasedOnUrl"><a href="http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap">http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap</a></h4>
-	<h3 style="color:red;">Question to be Answered:</h3>
-	<h4 style="color:red;">Does Bootstrap "pull-x" and "push-x" feature pull and push off visibility from screen, but remain available to screenreaders?</h4>
+	<h4>Additional Question to be Answered:</h4>
+	<h4>Does Bootstrap "pull-x" and "push-x" feature pull and push off visibility from screen, but remain available to screenreaders?</h4>
 	</div><!-- closes col md12 -->
 	</div><!-- closes container fluid -->
 </section>
