--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -114,14 +114,14 @@
 
 
 <section>
-
-	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="background:#69b4a4;color:#ffffff;">
+	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="background:#69b4a4;color:#ffffff;color:a{#ffffff;}">
        	<div class="col-md-12" id="task29July2015">
        	<header><h2>Task: Investigate Bootstrap Column Re-ordering</h2></header>
 	<h4 itemprop="isBasedOnUrl"><a href="http://getbootstrap.com/css/#grid-column-ordering">http://getbootstrap.com/css/#grid-column-ordering</a></h4>
 	<h4 itemprop="isBasedOnUrl"><a href="http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap">http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap</a></h4>
-	<h3>Additional Question to be Answered:</h3>
-	<h4>Does Bootstrap "pull-x" and "push-x" feature pull and push off visibility from screen, but remain available to screenreaders?</h4>
+	<h3>Additional Questions to be Answered:</h3>
+	<h4>When columns are pushed and pulled off screen, what do screen readers see?</h4>
+	<h4>The assumption is that the outline is based on mobile-first.  What does this affect?</h4>
 	</div><!-- closes col md12 -->
 	</div><!-- closes container fluid -->
 </section>
