--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -137,7 +137,7 @@
    
      <section>
      <!-- order test1 starts here -->
-     	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="border-bottom: solid 5px #69b4a4;">
+     	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="padding-bottom:25px;border-bottom:solid 5px #69b4a4;">
        	  <div class="col-md-12" id="ordertest1" >
           <h3>Bootstrap Column Order Test One</h3>
               <h4 itemprop="isBasedOnUrl"><a href="http://getbootstrap.com/css/#grid-column-ordering">Bootstrap Grid Column Ordering</a></h4>
