--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -137,7 +137,7 @@
    
      <section>
      <!-- order test1 starts here -->
-     	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="padding-bottom:25px;border-bottom:solid 5px #69b4a4;">
+     	<div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="border-bottom:solid 5px #69b4a4;">
        	  <div class="col-md-12" id="ordertest1" >
           <h3>Bootstrap Column Order Test One</h3>
               <h4 itemprop="isBasedOnUrl"><a href="http://getbootstrap.com/css/#grid-column-ordering">Bootstrap Grid Column Ordering</a></h4>
@@ -156,7 +156,8 @@
           <div class="col-md-3 col-md-pull-9" style="background:#7E96A0;">.col-md-3 .col-md-pull-9 Column C</div>
           <div class="col-md-9 col-md-push-3" style="background:#80B0A6;">.col-md-9 .col-md-push-3 Column D</div>
         </div><!-- closes second row -->
-        </div><!-- end code from http://getbootstrap.com/css/#grid-column-ordering -->
+        </div><!-- closes container fluid for test one -->
+        <div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="border-bottom:solid 5px #69b4a4;">
         <div class="row" style="padding-top:25px;">
           <div class="col-md-4">
         <ul>
