--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -198,7 +198,7 @@
      </section>
 
     <section><!-- test 3 starts here -->
-        <div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="padding-bottom:50px;">
+        <div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork" style="padding-bottom:50px;padding-top:50px;">
        	<div class="col-md-12" id="ordertest3" style="border-top: solid 5px #69b4a4;">
        		<h3>Bootstrap Column Order Test Three</h3>
               	<h4 itemprop="isBasedOnUrl"><a href="http://getbootstrap.com/css/#grid-column-ordering">Bootstrap Grid Column Ordering</a></h4>
