--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -126,7 +126,8 @@
 
 	<section>
         <div class="container-fluid" itemscope itemtype="http://schema.org/CreativeWork">
-        <div class="row" style="padding-top:25px;padding-bottom:50px;border-top:solid 5px #69b4a4;">
+        	<header><h3>References</h3></header>
+        <div class="row" style="padding-top:25px;padding-bottom:50px;border-bottom:solid 5px #69b4a4;">
           <div class="col-md-4">
         <ul>
          <li><a href="http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap">http://stackoverflow.com/questions/18057270/column-order-manipulation-using-col-lg-push-and-col-lg-pull-in-twitter-bootstrap</a></li>
