--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -143,8 +143,9 @@
               <li><a href="http://jsfiddle.net/SchmalzyB/4cbzY/">http://jsfiddle.net/SchmalzyB/4cbzY/</a></li>
               <li><a href="http://jsfiddle.net/DrGeneral/BxaNN/1/">http://jsfiddle.net/DrGeneral/BxaNN/1/</a></li>
             </ul>
-          </div>
+          </div><!-- closes col md 4 -->
         </div><!-- closes row for ul li -->
+        </div><!-- closes container fluid -->
 	</section>
    
      <section>
