--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -159,15 +159,15 @@
        <!-- code from http://getbootstrap.com/css/#grid-column-ordering -->
         <div class="row" style="padding-top:25px;">
           <h4>Original code taken from Bootstrap page in full width not constrained by column md-12</h4>
-          <div class="col-md-9 col-md-push-3" style="background:#9CCB3B;">.col-md-9 .col-md-push-3 Column A</div>
-          <div class="col-md-3 col-md-pull-9" style="background:#29AFCE;">.col-md-3 .col-md-pull-9 Column B</div>
+          <div class="col-md-9 col-md-push-3" style="background:#9CCB3B;">.col-md-9 .col-md-push-3 <h5>Column A</h5></div>
+          <div class="col-md-3 col-md-pull-9" style="background:#29AFCE;">.col-md-3 .col-md-pull-9 <h5>Column B</h5></div>
         </div><!-- closes first row -->
         <!-- end code from http://getbootstrap.com/css/#grid-column-ordering -->
         <!-- code from http://getbootstrap.com/css/#grid-column-ordering -->
         <div class="row">
           <h4>Original code taken from Bootstrap page, but reversed, in full width not constrained by column md-12</h4> 
-          <div class="col-md-3 col-md-pull-9" style="background:#7E96A0;">.col-md-3 .col-md-pull-9 Column C</div>
-          <div class="col-md-9 col-md-push-3" style="background:#80B0A6;">.col-md-9 .col-md-push-3 Column D</div>
+          <div class="col-md-3 col-md-pull-9" style="background:#7E96A0;">.col-md-3 .col-md-pull-9 <h5>Column C</h5></div>
+          <div class="col-md-9 col-md-push-3" style="background:#80B0A6;">.col-md-9 .col-md-push-3 <h5>Column D</h5></div>
         </div><!-- closes second row -->
         </div><!-- closes container fluid for test one -->
         
