--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -226,6 +226,10 @@
        </div><!-- closes order test 3 -->
       </div><!-- closes container-fluid for order test three -->
     </section><!-- test three ends here -->
+    <aside>
+    	<h4>Documentation</h4>
+    	<img src="https://cloud.githubusercontent.com/assets/10209570/8989376/d1af061a-36b9-11e5-9a34-1b45d69258e0.gif" class="img-responsive">
+    </aside>
     
     
   </main><!-- all else are references -->
