--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -227,8 +227,12 @@
       </div><!-- closes container-fluid for order test three -->
     </section><!-- test three ends here -->
     <aside>
+    	<div class="container-fluid">
+    	<div class="col-md-12">
     	<h4>Documentation</h4>
     	<img src="https://cloud.githubusercontent.com/assets/10209570/8989376/d1af061a-36b9-11e5-9a34-1b45d69258e0.gif" class="img-responsive">
+    	</div><!-- col md12 -->
+    	</div><!-- containerfluid -->
     </aside>
     
     
