--- a/order/29July2015-usfsp-test2.html
+++ b/order/29July2015-usfsp-test2.html
@@ -230,10 +230,10 @@
     	<div class="container-fluid">
     	<h4>Documentation</h4>
     	<div class="col-md-6">
-    	<img src="https://cloud.githubusercontent.com/assets/10209570/8989376/d1af061a-36b9-11e5-9a34-1b45d69258e0.gif" class="img-responsive">
+    	<img src="https://cloud.githubusercontent.com/assets/10209570/8989376/d1af061a-36b9-11e5-9a34-1b45d69258e0.gif" alt="" class="img-responsive">
     	</div><!-- col md6 -->
     	<div class="col-md-6">
-    	<img src="https://cloud.githubusercontent.com/assets/10209570/8989499/9effcb72-36ba-11e5-89b8-1782d339d85a.gif" class="img-responsive">
+    	<img src="https://cloud.githubusercontent.com/assets/10209570/8989499/9effcb72-36ba-11e5-89b8-1782d339d85a.gif" alt="" class="img-responsive">
     	</div><!-- closes col-md-6 -->
     	</div><!-- containerfluid -->
     </aside>
