--- a/index.html
+++ b/index.html
@@ -410,12 +410,13 @@
       </div><!-- closes md4 one -->
       <div class="col-md-4">
           <ul>
-            <li><a href="https://cook-my-catch.github.io/order/29July2015-usfsp-test2.html">29July 2015 OrderColumn Test</a></li>
+            <li><a href="https://developers.google.com/speed/pagespeed/insights/">Google PageSpeed Insights</a></li>
+            
           </ul>
       </div><!-- closes md4 two -->
       <div class="col-md-4">
         <ul>
-          <li><a href="#">TBD</a></li>
+          <li><a href="https://cook-my-catch.github.io/order/29July2015-usfsp-test2.html">29July 2015 OrderColumn Test</a></li>
           
         </ul>
       </div><!-- closes colmd4 three-->
