--- a/index.html
+++ b/index.html
@@ -410,8 +410,10 @@
       </div><!-- closes md4 one -->
       <div class="col-md-4">
           <ul>
+            <li><a href="https://www.optimizely.com/">Optimizely.com</a></li>
             <li><a href="https://developers.google.com/speed/pagespeed/insights/">Google PageSpeed Insights</a></li>
-            
+            <li><a href="http://www.pagescoring.com/website-speed-test/">Page Scoring</a></li>
+            <li><a href="http://gtmetrix.com/">GTMetrix</a></li>
           </ul>
       </div><!-- closes md4 two -->
       <div class="col-md-4">
