--- a/speedtests/index1_4August2015.html
+++ b/speedtests/index1_4August2015.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Coding Exercise</title>
+    <title>Speed Test One</title>
 
     <!-- Bootstrap -->
     <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
@@ -25,7 +25,7 @@
     <!-- USFSP -->
     <link href='http://fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond' rel='stylesheet' type='text/css'>
     <link href="usfsp.css" rel="stylesheet">
-    <link href="usfsp-flex0.css" rel="stylesheet">
+    <!-- <link href="usfsp-flex0.css" rel="stylesheet"> -->
     <!-- end USFSP -->
   </head>
   <body class="wrap_all">
