--- a/mobile/index.html
+++ b/mobile/index.html
@@ -417,7 +417,7 @@
       </div><!-- closes md4 two -->
       <div class="col-md-4">
         <ul>
-          <li><a href="https://cook-my-catch.github.io/order/29July2015-usfsp-test2.html">29July 2015 OrderColumn Test</a></li>
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile1.html">10 August 2015 Mobile Test One</a></li>
           
         </ul>
       </div><!-- closes colmd4 three-->
