--- a/mobile/10Aug2015-mobile2.html
+++ b/mobile/10Aug2015-mobile2.html
@@ -427,10 +427,17 @@ Step two for this page: Comment out ALL images.</p>
             <li><a href="http://gtmetrix.com/">GTMetrix</a></li>
           </ul>
       </div><!-- closes md4 two -->
-      <div class="col-md-4">
+     <div class="col-md-4">
         <ul>
-          <li><a href="https://cook-my-catch.github.io/order/29July2015-usfsp-test2.html">29July 2015 OrderColumn Test</a></li>
-          
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile1.html">10 August 2015 Mobile Test One</a></li>
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile2.html">10 August 2015 Mobile Test Two</a></li
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile3.html">10 August 2015 Mobile Test Three</a></li
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile4.html">10 August 2015 Mobile Test Four</a></li
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile5.html">10 August 2015 Mobile Test Five</a></li
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile6.html">10 August 2015 Mobile Test Six</a></li
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile7.html">10 August 2015 Mobile Test Seven</a></li
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile8.html">10 August 2015 Mobile Test Eight</a></li
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile9.html">10 August 2015 Mobile Test Nine</a></li
         </ul>
       </div><!-- closes colmd4 three-->
       </footer>
