--- a/mobile/10Aug2015-mobile1.html
+++ b/mobile/10Aug2015-mobile1.html
@@ -440,14 +440,14 @@ Ensure that the overall size of page is appropriate to the memory limitations of
      <div class="col-md-4">
         <ul>
           <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile1.html">10 August 2015 Mobile Test One</a></li>
-          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile2.html">10 August 2015 Mobile Test Two</a></li
-          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile3.html">10 August 2015 Mobile Test Three</a></li
-          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile4.html">10 August 2015 Mobile Test Four</a></li
-          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile5.html">10 August 2015 Mobile Test Five</a></li
-          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile6.html">10 August 2015 Mobile Test Six</a></li
-          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile7.html">10 August 2015 Mobile Test Seven</a></li
-          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile8.html">10 August 2015 Mobile Test Eight</a></li
-          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile9.html">10 August 2015 Mobile Test Nine</a></li
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile2.html">10 August 2015 Mobile Test Two</a></li>
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile3.html">10 August 2015 Mobile Test Three</a></li>
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile4.html">10 August 2015 Mobile Test Four</a></li>
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile5.html">10 August 2015 Mobile Test Five</a></li>
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile6.html">10 August 2015 Mobile Test Six</a></li>
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile7.html">10 August 2015 Mobile Test Seven</a></li>
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile8.html">10 August 2015 Mobile Test Eight</a></li>
+          <li><a href="https://cook-my-catch.github.io/mobile/10Aug2015-mobile9.html">10 August 2015 Mobile Test Nine</a></li>
         </ul>
       </div><!-- closes colmd4 three-->
       </footer>
